[gd_scene load_steps=56 format=2]

[ext_resource path="res://Character/Player.gd" type="Script" id=1]
[ext_resource path="res://Objects/Bullets/PlayerBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Character spriites/Player/Front/Ideal/Ideal 1.png" type="Texture" id=3]
[ext_resource path="res://assets/Character spriites/Player/Left/Walking/walking 1.png" type="Texture" id=4]
[ext_resource path="res://assets/Character spriites/Player/Left/Walking/walking 2.png" type="Texture" id=5]
[ext_resource path="res://assets/Character spriites/Player/Left/Walking/walking 3.png" type="Texture" id=6]
[ext_resource path="res://assets/Character spriites/Player/Left/Walking/walking 4.png" type="Texture" id=7]
[ext_resource path="res://assets/Character spriites/Player/Back/Walking/walking 1.png" type="Texture" id=8]
[ext_resource path="res://assets/Character spriites/Player/Back/Walking/walking 2.png" type="Texture" id=9]
[ext_resource path="res://assets/Character spriites/Player/Back/Walking/walking 3.png" type="Texture" id=10]
[ext_resource path="res://assets/Character spriites/Player/Back/Walking/walking 4.png" type="Texture" id=11]
[ext_resource path="res://assets/Character spriites/Player/Back/Walking/walking 5.png" type="Texture" id=12]
[ext_resource path="res://assets/Character spriites/Player/Back/Walking/walking 6.png" type="Texture" id=13]
[ext_resource path="res://assets/Character spriites/Player/Front/Walking/walking 1.png" type="Texture" id=14]
[ext_resource path="res://assets/Character spriites/Player/Front/Walking/walking 3.png" type="Texture" id=15]
[ext_resource path="res://assets/Character spriites/Player/Front/Walking/walking 2.png" type="Texture" id=16]
[ext_resource path="res://assets/Character spriites/Player/Front/Walking/walking 4.png" type="Texture" id=17]
[ext_resource path="res://assets/Character spriites/Player/Front/Walking/walking 5.png" type="Texture" id=18]
[ext_resource path="res://assets/Character spriites/Player/Front/Walking/walking 6.png" type="Texture" id=19]
[ext_resource path="res://assets/Character spriites/Player/Front/Walking/walking 7.png" type="Texture" id=20]
[ext_resource path="res://assets/Character spriites/Player/Back/Pushing/Pushing 1.png" type="Texture" id=21]
[ext_resource path="res://assets/Character spriites/Player/Back/Pushing/Pushing 2.png" type="Texture" id=22]
[ext_resource path="res://assets/Character spriites/Player/Back/Pushing/Pushing 3.png" type="Texture" id=23]
[ext_resource path="res://assets/Character spriites/Player/Back/Pushing/Pushing 4.png" type="Texture" id=24]
[ext_resource path="res://assets/Character spriites/Player/Front/Pushing/pushing 1.png" type="Texture" id=25]
[ext_resource path="res://assets/Character spriites/Player/Front/Pushing/pushing 2.png" type="Texture" id=26]
[ext_resource path="res://assets/Character spriites/Player/Front/Pushing/pushing 4.png" type="Texture" id=27]
[ext_resource path="res://assets/Character spriites/Player/Front/Pushing/pushing 3.png" type="Texture" id=28]
[ext_resource path="res://assets/Character spriites/Player/Front/Pushing/pushing 6.png" type="Texture" id=29]
[ext_resource path="res://assets/Character spriites/Player/Front/Pushing/pushing 5.png" type="Texture" id=30]
[ext_resource path="res://assets/Character spriites/Player/Front/Pushing/pushing 7.png" type="Texture" id=31]
[ext_resource path="res://assets/Character spriites/Player/Back/Ideal/ideal.png" type="Texture" id=32]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Walking/walking 1.png" type="Texture" id=33]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Walking/walking 2.png" type="Texture" id=34]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Walking/walking 3.png" type="Texture" id=35]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Walking/walking 4.png" type="Texture" id=36]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Ideal/ideal.png" type="Texture" id=37]
[ext_resource path="res://assets/Character spriites/Player/Left/Pushing/pushing 1.png" type="Texture" id=38]
[ext_resource path="res://assets/Character spriites/Player/Left/Pushing/pushing 2.png" type="Texture" id=39]
[ext_resource path="res://assets/Character spriites/Player/Left/Pushing/pushing 3.png" type="Texture" id=40]
[ext_resource path="res://assets/Character spriites/Player/Left/Pushing/pushing 4.png" type="Texture" id=41]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Pushing/pushing 1.png" type="Texture" id=42]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Pushing/pushing 2.png" type="Texture" id=43]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Pushing/pushing 3.png" type="Texture" id=44]
[ext_resource path="res://assets/Character spriites/Player/Rignt/Pushing/pushing 4.png" type="Texture" id=45]
[ext_resource path="res://assets/Character spriites/Player/Left/Ideal/ideal.png" type="Texture" id=46]
[ext_resource path="res://assets/Unique_Projectiles_Volume_1/Flame01.PNG" type="Texture" id=47]
[ext_resource path="res://assets/Unique_Projectiles_Volume_1/Hit_ImpactWhite02.png" type="Texture" id=48]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "ideal_front",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walking left",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "walking_back",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "walking_front",
"speed": 8.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "pushing_back",
"speed": 8.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "pushing_front",
"speed": 8.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "ideal_back",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "walking_right",
"speed": 8.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "ideal_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "pushing_left",
"speed": 8.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": true,
"name": "pushing_right",
"speed": 8.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": true,
"name": "ideal_left",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.3264
height = 28.8483

[sub_resource type="CapsuleShape2D" id=3]
radius = 33.9465
height = 38.5616

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.00740741 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 0.328125, 0, 0.784314 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 256.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=7]
radius = 39.5603

[node name="Player" type="KinematicBody2D"]
collision_mask = 511
script = ExtResource( 1 )
Bullet = ExtResource( 2 )
shoot_cooldown = 0.4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.180795, 0.180795 )
frames = SubResource( 1 )
animation = "pushing_back"
frame = 1
playing = true

[node name="Bullet_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet_area"]
position = Vector2( 0, 4.71562 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.16084 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Shooting_timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="firing direction" type="Sprite" parent="."]
rotation = 0.807202
scale = Vector2( 0.25, 0.25 )
centered = false
offset = Vector2( 200, 0 )

[node name="Particles2D" type="Particles2D" parent="firing direction"]
position = Vector2( 235.128, 33.7355 )
process_material = SubResource( 6 )
texture = ExtResource( 47 )

[node name="Firing" type="Position2D" parent="firing direction"]
position = Vector2( 265.4, 30 )
rotation = -0.000267753

[node name="Hit" type="Sprite" parent="."]
visible = false
modulate = Color( 0.960784, 0.929412, 0.929412, 0.752941 )
position = Vector2( 2.32135, -1.93443 )
scale = Vector2( 0.400956, 0.473691 )
texture = ExtResource( 48 )

[node name="Hit timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )
[connection signal="area_entered" from="Bullet_area" to="." method="_on_Bullet_area_area_entered"]
[connection signal="timeout" from="Shooting_timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Hit timer" to="." method="_on_Hit_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
